--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -1,3 +1,10 @@
 /* ********* */
 /* @GRID*/
 /* ********* */
+
+.newsletter{
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
